Armature: Fix T55070: Bones relationship lines are offsetted

Was missing object matrix multiplication.